--- a/include/header.html
+++ b/include/header.html
@@ -21,7 +21,7 @@
       <li class="breadcrumb-item">
         <a href="#" class="text-secondary"><i class="ri-home-5-fill"></i></a>
       </li>
-      <li class="breadcrumb-item active" aria-current="page" data-i18n="mainDashboard">메인 대시보드</li>
+      <li class="breadcrumb-item active" aria-current="page" data-i18n="mainDashboard">Main Dashboard</li>
     </ol>
   </nav>
   <!-- //breadcrumb -->
@@ -42,35 +42,35 @@
     <ul class="list-group gap-2">
       <li class="list-group-item alert-box">
         <button class="ico close-btn"><i class="ri-close-line"></i></button>
-        <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림1</strong>
+        <strong class="d-block mb-2" data-i18n="alarmSample">Entrance alarm notification</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
-          <span class="fs-6" data-i18n="recordSample">1F B동 01</span>
+          <span class="fs-6" data-i18n="recordSample">1A area 1F Main Gate 01</span>
         </div>
       </li>
       <!-- [loop] -->
       <li class="list-group-item alert-box">
         <button class="ico close-btn"><i class="ri-close-line"></i></button>
-        <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림2</strong>
+        <strong class="d-block mb-2" data-i18n="alarmSample">Entrance alarm notification</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
-          <span class="fs-6" data-i18n="recordSample">1F B동 01</span>
+          <span class="fs-6" data-i18n="recordSample">1A area 1F Main Gate 01</span>
         </div>
       </li>
       <li class="list-group-item alert-box">
         <button class="ico close-btn"><i class="ri-close-line"></i></button>
-        <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림3</strong>
+        <strong class="d-block mb-2" data-i18n="alarmSample">Entrance alarm notification</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
-          <span class="fs-6" data-i18n="recordSample">1F B동 01</span>
+          <span class="fs-6" data-i18n="recordSample">1A area 1F Main Gate 01</span>
         </div>
       </li>
       <li class="list-group-item alert-box">
         <button class="ico close-btn"><i class="ri-close-line"></i></button>
-        <strong class="d-block mb-2" data-i18n="alarmSample">출입초과 알림4</strong>
+        <strong class="d-block mb-2" data-i18n="alarmSample">Entrance alarm notification</strong>
         <div class="d-flex justify-content-between align-items-center opacity-75">
           <span class="fs-6">2024-10-03 15:30</span>
-          <span class="fs-6" data-i18n="recordSample">1F B동 01</span>
+          <span class="fs-6" data-i18n="recordSample">1A area 1F Main Gate 01</span>
         </div>
       </li>
       <!-- //loop -->
@@ -82,7 +82,7 @@
 
 <div class="card-title d-flex align-items-center position-absolute top-50 start-25 translate-middle-y">
   <i class="ri-layout-4-fill fs-2"></i>
-  <h2 class="text-light mb-0" data-i18n="titleSample">더 클래스 빌딩</h2>
+  <h2 class="text-light mb-0" data-i18n="titleSample">The Class building</h2>
   <button type="button" class="btn"><i class="ri-more-fill"></i></button>
 </div>
 <!-- //card-title -->
@@ -92,7 +92,7 @@
 <!-- tab-menu 추가하려면 밑에 -->
 <ul class="nav nav-tabs position-absolute bottom-0 start-25" id="myTab" role="tablist">
   <li class="nav-item" role="presentation">
-    <button class="nav-link active" id="tab-menu-1" data-bs-toggle="tab" data-bs-target="#tab-menu-pane-1" type="button" role="tab" aria-controls="tab1" aria-selected="true" data-i18n="mainDashboard">메인 대시보드</button>
+    <button class="nav-link active" id="tab-menu-1" data-bs-toggle="tab" data-bs-target="#tab-menu-pane-1" type="button" role="tab" aria-controls="tab1" aria-selected="true" data-i18n="mainDashboard">Main Dashboard</button>
   </li>
   <!-- <li class="nav-item" role="presentation">
     <button class="nav-link" id="tab-menu-2" data-bs-toggle="tab" data-bs-target="#tab-menu-pane-2" type="button" role="tab" aria-controls="tab2" aria-selected="false">직원 추가</button>
