--- a/include/sidebar-backup.html
+++ b/include/sidebar-backup.html
@@ -18,9 +18,9 @@
   </div>
 
   <p class="pc-caption pc-caption-btn mb-1 d-flex align-items-center">
-    <label data-i18n="quickStart">Quick Menu</label>
+    <label data-i18n="quickStart">빠른 메뉴</label>
     <button class="btn" type="button">
-      <span data-i18n="setting">Setting</span>
+      <span data-i18n="setting">설정</span>
       <i class="ri-settings-4-fill"></i>
     </button>
   </p>
@@ -29,106 +29,106 @@
       <li class="rounded-2">
         <button type="button" class="btn d-flex flex-column justify-content-center align-items-center" onclick="location.href='index.html'">
           <i class="i-btn ic-quick-1"></i>
-          <span data-i18n="mainDashboard">Main Dashboard</span>
+          <span data-i18n="mainDashboard">메인 대시보드</span>
         </button>
       </li>
       <li class="rounded-2">
         <button type="button" class="btn d-flex flex-column justify-content-center align-items-center">
           <i class="i-btn ic-quick-2"></i>
-          <span data-i18n="cctvMonitoring">CCTV Monitoring</span>
+          <span data-i18n="cctvMonitoring">CCTV 모니터링</span>
         </button>
       </li>
       <li class="rounded-2">
         <button type="button" class="btn d-flex flex-column justify-content-center align-items-center">
           <i class="i-btn ic-quick-3"></i>
-          <span data-i18n="doorControl">Access Control</span>
+          <span data-i18n="doorControl">출입문 관리</span>
         </button>
       </li>
       <li class="rounded-2">
         <button type="button" class="btn d-flex flex-column justify-content-center align-items-center">
           <i class="i-btn ic-quick-4"></i>
-          <span data-i18n="userManagement">User Management</span>
+          <span data-i18n="userManagement">사용자 관리</span>
         </button>
       </li>
     </ul>
   </div>
   <!-- //navbar-btn-content -->
   <p class="pc-caption pc-caption-btn mb-1 p-0">
-    <label data-i18n="mainNavigation">Main Menu</label>
+    <label data-i18n="mainNavigation">주요 메뉴</label>
   </p>
   <div class="navbar-content mb-3">
     <ul class="pc-navbar">
       <li class="pc-item mb-1">
         <a href="index.html" class="pc-link pc-main-link">
-          <span class="pc-mtext" data-i18n="mainDashboard">Main Dashboard</span>
+          <span class="pc-mtext" data-i18n="mainDashboard">메인 대시보드</span>
         </a>
       </li>
       <!-- //data-i18n -->
       <li class="pc-item pc-hasmenu">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="cctvManagement">CCTV Management</span>
+          <span class="pc-mtext" data-i18n="cctvManagement">CCTV 관리</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="cctvList">CCTV List</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="realtime">Real-time Monitoring</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="videoPlayback">Recorded Video Playback</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="notificationSettings">Notification Settings</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="cctvList">CCTV 목록</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="realtime">실시간 모니터링</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="videoPlayback">녹화 영상 조회</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="notificationSettings">알림 설정</a></li>
         </ul>
       </li>
       <li class="pc-item pc-hasmenu rounded-2">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="bioAccessManagement">Biometric Attendance Management</span>
+          <span class="pc-mtext" data-i18n="bioAccessManagement">생체정보 출퇴근 관리</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="sub-01.html" data-i18n="attendanceRecords">Attendance Records</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="biometricInform">Biometric Information Registration</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="attendanceStatistics">Attendance Statistics</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-01.html" data-i18n="attendanceRecords">출퇴근 기록</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="biometricInform">생체정보 등록</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="attendanceStatistics">출퇴근 통계</a></li>
         </ul>
       </li>
       <li class="pc-item pc-hasmenu rounded-2">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="employeeInformation">Employee Information Management</span>
+          <span class="pc-mtext" data-i18n="employeeInformation">직원 정보 관리</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="sub-02.html" data-i18n="employeeList">Employee List</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="departmentManagement">Department Management</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="permissionManagement">Permission Management</a></li>
+          <li class="pc-item"><a class="pc-link" href="sub-02.html" data-i18n="employeeList">직원 목록</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="departmentManagement">부서관리</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="permissionManagement">권한관리</a></li>
         </ul>
       </li>
       <li class="pc-item pc-hasmenu">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="securityManagement">Security Management</span>
+          <span class="pc-mtext" data-i18n="securityManagement">보안 관리</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="accessPermission">Access Permission Settings</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="securityLog">Security Log</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="securityPolicy">Security Policy</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="accessPermission">출입 권한 설정</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="securityLog">보안 로그</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="securityPolicy">보안 정책</a></li>
         </ul>
       </li>
       <li class="pc-item pc-hasmenu">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="systemSettings">System Settings</span>
+          <span class="pc-mtext" data-i18n="systemSettings">시스템 설정</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="systemInformation">System Information</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="backup">Backup & Restore</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="userManagement">User Management</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="systemInformation">시스템 정보</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="backup">백업 및 복원</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="userManagement">사용자 관리</a></li>
         </ul>
       </li>
       <li class="pc-item pc-hasmenu">
         <a href="javascript:void(0);" class="pc-link">
-          <span class="pc-mtext" data-i18n="help">Help</span>
+          <span class="pc-mtext" data-i18n="help">도움말</span>
           <span class="pc-arrow"><i class="ri-arrow-down-s-fill"></i></span>
         </a>
         <ul class="pc-submenu rounded-2">
           <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="faq">FAQ</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="userManual">User Manual</a></li>
-          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="technicalsupport">Technical Support Contact</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="userManual">사용자 메뉴얼</a></li>
+          <li class="pc-item"><a class="pc-link" href="javascript:void(0);" data-i18n="technicalsupport">기술 지원 연락처</a></li>
         </ul>
       </li>
     </ul>
@@ -136,8 +136,8 @@
   <!-- //navbar-content -->
   <div class="admin-container">
     <div class="d-flex justify-content-between">
-      <button class="admin-btn admin-btn1 btn" data-i18n="setting">Setting</button>
-      <button class="admin-btn admin-btn2 btn" data-i18n="help">Help</button>
+      <button class="admin-btn admin-btn1 btn" data-i18n="setting">환경 설정</button>
+      <button class="admin-btn admin-btn2 btn" data-i18n="help">도움말</button>
     </div>
     <div class="admin-profile d-flex align-items-center justify-content-between">
       <div class="admin-info">
