--- a/include/header.html
+++ b/include/header.html
@@ -5,6 +5,7 @@
     브라우저가 비디오 태그를 지원하지 않습니다.
   </video>
 </div> -->
+<!-- 250314 메인 비주얼 변경 -->
 <div class="visual-slider position-absolute top-0 start-0 w-100 z-n1">
   <div class="swiper">
     <div class="swiper-wrapper">
@@ -14,7 +15,7 @@
     </div>
   </div>
 </div>
-<!-- //video-bg -->
+<!-- //visual-slider -->
 <div class="d-flex justify-content-between align-items-center flex-wrap">
   <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
     <ol class="breadcrumb">
